--- a/Employee.html
+++ b/Employee.html
@@ -7,9 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <?php
-    header("Location:index.html");
-
-    ?>
+    <h2>Welcome </h2>
 </body>
 </html>
