--- a/Mybank/0_index.html
+++ b/Mybank/0_index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My bank</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles_index.css">
     <link rel="icon" href="img/icon-gold.png">
     <script
   src="https://code.jquery.com/jquery-3.6.0.js"
@@ -38,7 +38,7 @@
     </div>
 
     <div class="login">
-        <form method="post" action="login.php">
+        <form method="post" action="1_login.php">
             <table id="login">
             <tr>
                 <td><label for="user_login">User:</label></td>
