--- a/Mybank/index.html
+++ b/Mybank/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- First page where we a create a basic login system.-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,10 +8,8 @@
     <title>My bank</title>
     <link rel="stylesheet" href="styles/styles_index.css">
     <link rel="icon" href="img/icon-gold.png">
-    <script
-  src="https://code.jquery.com/jquery-3.6.0.js"
-  integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
-  crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"   integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+      crossorigin="anonymous"></script>
 
 <script>
 
@@ -38,7 +37,7 @@
     </div>
 
     <div class="login">
-        <form method="post" action="1_login.php">
+        <form method="post" action="login.php">
             <table id="login">
             <tr>
                 <td><label for="user_login">User:</label></td>
