Updating index.html

--- a/Mybank/index.html
+++ b/Mybank/index.html
@@ -29,6 +29,15 @@
 
 <body>
     <div id="welcome"><h1>Welcome to my bank</h1></div>
+    
+    <div id="by">
+        <p>This is a educational project made by Jose Luis Diaz</p>
+        <p>All data is invented.</p>
+        <p>To acces use: <br>
+            User: Maria23 <br>
+            Password: 12ab</p>
+    </div>
+
     <div id="container">
         <p>Welcome to my test website. Please introuduce your user and password!</p>
     </div>
