--- a/Mybank/index.html
+++ b/Mybank/index.html
@@ -34,8 +34,8 @@
         <p>This is a educational project made by Jose Luis Diaz</p>
         <p>All data is invented.</p>
         <p>To acces use: <br>
-            User: Maria23 <br>
-            Password: 12ab</p>
+            User: Patricia <br>
+            Password: 1234</p>
     </div>
 
     <div id="container">
