--- a/Mybank/index.html
+++ b/Mybank/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My bank</title>
-    <link rel="stylesheet" href="styles/styles_index.css">
+    <link rel="stylesheet" type="text/css" href="styles/styles_index.css">
     <link rel="icon" href="img/icon-gold.png">
     <script src="https://code.jquery.com/jquery-3.6.0.js"   integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
       crossorigin="anonymous"></script>
@@ -30,7 +30,7 @@
 <body>
     <div id="welcome"><h1>Welcome to my bank</h1></div>
     
-    <div id="by">
+    <div id="by" style="float: right; font-size: 12pt; margin: auto; margin-right: 5%; color: #963b3b; font-weight: bold;">
         <p>This is a educational project made by Jose Luis Diaz</p>
         <p>All data is invented.</p>
         <p>To acces use: <br>
